--- a/environment.env
+++ b/environment.env
@@ -1,5 +1,5 @@
 PORT=7070
-FORWARD_URL=http://httpbin.org/get
+FORWARD_URL=http://localhost:7071/stream-to-frame
 DB_NAME=data-state.sqlite3
 MAX_LIMIT_RESET_STATE=10
 RESET_STATE_SCHEDULER_TIME=3
