--- a/environment.env
+++ b/environment.env
@@ -1,7 +1,7 @@
 PORT=7070
-FORWARD_URL_UPLOAD_BASE64=http://localhost:7071/upload-encoded
-FORWARD_URL_UPLOAD_RAW=http://localhost:7071/upload
-FORWARD_URL_UPLOAD_VIA_URL=http://localhost:7071/upload-url
+FORWARD_URL_UPLOAD_BASE64=http://192.168.88.203:7071/upload-encoded
+FORWARD_URL_UPLOAD_RAW=http://192.168.88.203:7071/upload
+FORWARD_URL_UPLOAD_VIA_URL=http://192.168.88.203:7071/upload-url
 MAX_LIMIT_RESET_STATE=10
 RESET_STATE_SCHEDULER_TIME=3
 
@@ -11,7 +11,7 @@ KAFKA_CONSUME_TOPIC=LPRResult
 KAFKA_CONSUME_TOPIC_GROUP_ID=lpr-service-result
 KAFKA_CONSUME_TOPIC_IMAGE_RESULT=LPRImageServiceResult
 
-DB_HOST=127.0.0.1
+DB_HOST=192.168.88.203
 DB_PORT=3306
 DB_USERNAME=takeru
 DB_PASSWORD=takeru123
